--- a/.github/workflows/borsa-botu.yml
+++ b/.github/workflows/borsa-botu.yml
@@ -1,8 +1,6 @@
 name: Run Borsa Botu
 
 on:
-  schedule:
-    - cron: '0 9 * * *'  # Türkiye saatiyle her gün 12:00'de çalışır
   workflow_dispatch:
 
 jobs:
@@ -16,13 +14,12 @@ jobs:
     - name: Python kur
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
-    - name: Gereken paketleri kur
+    - name: Gerekli paketleri kur
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install yfinance
+        pip install requests
 
     - name: Botu çalıştır
-      run: |
-        python Main.py
+      run: python Main.py
