--- a/.github/workflows/borsa-botu.yml
+++ b/.github/workflows/borsa-botu.yml
@@ -1,8 +1,6 @@
 name: Run Borsa Botu
 
 on:
-  schedule:
-    - cron: '0 9 * * *'  # Türkiye saatiyle 12:00
   workflow_dispatch:
 
 jobs:
@@ -11,16 +9,19 @@ jobs:
 
     steps:
     - name: Depoyu klonla
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    -     - name: Python kur
+    - name: Python 3.10 kur
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'  # ya da '3.11' olabilir
+        python-version: '3.10'
 
     - name: Gerekli paketleri kur
       run: |
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install yfinance
+        pip install pandas
+        pip install requests
 
     - name: Botu çalıştır
-      run: python Main.py
+      run: python main.py
