--- a/.github/workflows/borsa-botu.yml
+++ b/.github/workflows/borsa-botu.yml
@@ -9,19 +9,16 @@ jobs:
 
     steps:
     - name: Depoyu klonla
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
-    - name: Python 3.10 kur
+    - name: Python kurulumu
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Gerekli paketleri kur
+    - name: Bağımlılıkları yükle
       run: |
-        python -m pip install --upgrade pip
-        pip install yfinance
-        pip install pandas
-        pip install requests
+        pip install -r requirements.txt
 
     - name: Botu çalıştır
-      run: python main.py
+      run: python Main.py
